--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
+layout: splash
+author_profile: false
+excerpt: "This post should display a **header with an overlay image**, if the theme supports it."
+header:
+  overlay_image: /assets/images/group-of-writers.png
+#  overlay_filter: rgba() # rgba() linear-gradient(rgba()) or decimal value for black
+# caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+#  actions:
+#    - label: "More Info"
+#      url: "https://unsplash.com"
 ---
+
+# Hi Y'all!
+
+Lorem ipsum
