Home Banner Changes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: splash
 author_profile: false
 excerpt: "This post should display a **header with an overlay image**, if the theme supports it."
 header:
-  overlay_image: /assets/images/group-of-writers.png
-#  overlay_filter: rgba() # rgba() linear-gradient(rgba()) or decimal value for black
+  overlay_image: /assets/images/banner-space.png
+  overlay_filter: .2 # rgba() linear-gradient(rgba()) or decimal value for black
 # caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 #  actions:
 #    - label: "More Info"
