Fleshing out Home page content.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,68 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: splash
 author_profile: false
-excerpt: "This post should display a **header with an overlay image**, if the theme supports it."
+excerpt: "Welcome to my portfolio site! Here I hope to house professional, educational, and fun projects I felt help me grow as an individual."
 header:
   overlay_image: /assets/images/banner-space.png
-  overlay_filter: .2 # rgba() linear-gradient(rgba()) or decimal value for black
+  overlay_filter: .3 # rgba() linear-gradient(rgba()) or decimal value for black
 # caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 #  actions:
 #    - label: "More Info"
 #      url: "https://unsplash.com"
+
+feature_row:
+  - url: assets/images/professional-artifacts.png
+    image_path: /assets/images/professional-artifacts.svg
+    alt: "Professional Artifacts Placeholder"
+    title: "Professional Artifacts"
+    excerpt: "Lorem Ipsum"
+    # btn_label: "Professional Artifacts"
+  - url: assets/images/educational-artifacts.png
+    image_path: /assets/images/educational-artifacts.svg
+    alt: "Educational Artifacts Placeholder"
+    title: "Educational Artifacts"
+    excerpt: "Lorem Ipsum"
+  - url: assets/images/explorative-artifacts.png
+    image_path: /assets/images/explorative-artifacts.svg
+    alt: "Explorative Artifacts Placeholder"
+    title: "Explorative Artifacts"
+    excerpt: "Lorem Ipsum"
 ---
 
-# Hi Y'all!
+<h1>Purpose</h1>
 
-Lorem ipsum
+<p>Within this site, I have shared artifacts from my M.A journey, professional, teaching, and personal experience. There are resources as well that students or any individuals interested in <b>Technical Writing</b>.</p>
+
+<p>Any work related to my Master of Arts in Professional and Technical Writing help demonstrate how I met the following learning outcomes:</p>
+
+<ul>
+<li>Demonstrate mastery of craft through attention to detail</li>
+
+<li>Be able to analyze and create documents that work best to a wide range of rhetorical situations</li>
+
+<li>Use technology to effectively create and deliver content</li>
+
+<li>Understand the history and major theories of my profession; knowing how the rules were created and have changed</li>
+
+<li>Conduct primary and secondary research that can contribute knkowledge to my field</li>
+
+<li>Participate in profession beyond classroom</li>
+
+<li>Conduct myself in a professional manor </li>
+</ul>
+
+<p>If you are interested in reviewing my resume or checking out my professional experience outside of these artifacts, checkout my <a href="https://www.linkedin.com/in/tanner-sullivan-184491121/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B%2BWCNEXP5RjqwoVrS5yETYg%3D%3D" target="_blank">LinkedIn</a>
+
+<br/>
+
+<h1>Navigating this Site</h1>
+
+{% include feature_row %}
+
+<!--{% include figure image_path="/assets/images/professional-artifacts.png" alt="Placeholder image for professional artifacts link" caption="Review my professional work or projects that reflect skills valued by software documentation writers. " %}
+
+{% include figure image_path="/assets/images/educational-artifacts.png" alt="Placeholder image for educational artifacts link" caption="Review my educational work or projects that reflect on my experience as an educator. " %}
+
+{% include figure image_path="/assets/images/explorative-artifacts.png" alt="Placeholder image for explorative artifacts link" caption="Review some of my personal projects where I have a little fun." %}-->
+
+<br/>
