Last minute tweaks :)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: splash
 author_profile: false
 excerpt: "Welcome to my portfolio site! Here I hope to house professional, educational, and fun projects I felt help me grow as an individual."
 header:
-  overlay_image: /assets/images/banner-space.png
+  # overlay_
+  image: /assets/images/banner-space.png
   overlay_filter: .3 # rgba() linear-gradient(rgba()) or decimal value for black
 # caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 #  actions:
@@ -32,7 +33,12 @@ feature_row:
     excerpt: "Lorem Ipsum"
 ---
 
-<h1>Purpose</h1>
+<!--<h1> Welcome to my Portfolio site!</h1>
+
+<p>Here I hope to house professional, educational, and fun projects I felt help me grow as an individual.</p>-->
+
+<!--<h1>Purpose</h1>-->
+<h1> Welcome to my Portfolio site!</h1>
 
 <p>Within this site, I have shared artifacts from my M.A journey, professional, teaching, and personal experience. There are resources as well that students or any individuals interested in <b>Technical Writing</b>.</p>
 
@@ -58,7 +64,7 @@ feature_row:
 
 <br/>
 
-<h1>Navigating this Site</h1>
+<h1>Available Artifacts</h1>
 
 {% include feature_row %}
 
