--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@ header:
 #    - label: "More Info"
 #      url: "https://unsplash.com"
 
-gallery:
+feature_row:
   - url: /professional-artifacts/
-    image_path: /assets/images/professional-artifacts.svg
+    image_path: /assets/images/open-circle1.svg
     alt: "Professional Artifacts Placeholder"
-    title: "Professional Artifacts"
-    excerpt: "Lorem Ipsum"
+    btn_label: "Professional Artifacts"
+    btn_class: ".btn--inverse"
     # btn_label: "Professional Artifacts"
   - url: /educational-artifacts/
-    image_path: /assets/images/educational-artifacts.svg
+    image_path: /assets/images/open-circle2.svg
     alt: "Educational Artifacts Placeholder"
-    title: "Educational Artifacts"
-    excerpt: "Lorem Ipsum"
+    btn_label: "Educational Artifacts"
+    btn_class: ".btn--inverse"
   - url: /explorative-artifacts/
-    image_path: /assets/images/explorative-artifacts.svg
+    image_path: /assets/images/open-circle3.svg
     alt: "Explorative Artifacts Placeholder"
-    title: "Explorative Artifacts"
-    excerpt: "Lorem Ipsum"
+    btn_label: "Explorative Artifacts"
+    btn_class: ".btn--inverse"
 ---
 
 <!--<h1> Welcome to my Portfolio site!</h1>
@@ -66,7 +66,7 @@ gallery:
 
 <h1>Available Artifacts</h1>
 
-{% include gallery %}
+{% include feature_row %}
 
 <!--{% include figure image_path="/assets/images/professional-artifacts.png" alt="Placeholder image for professional artifacts link" caption="Review my professional work or projects that reflect skills valued by software documentation writers. " %}
 
