changes to home page artifact images.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@ feature_row:
   - url: /professional-artifacts/
     image_path: /assets/images/open-circle1.svg
     alt: "Professional Artifacts Placeholder"
-    btn_label: "Professional Artifacts"
-    btn_class: ".btn--inverse"
+    title: "Professional Artifacts"
+    excerpt: "A collection of my work intended to demonstrate my professional skills"
     # btn_label: "Professional Artifacts"
   - url: /educational-artifacts/
     image_path: /assets/images/open-circle2.svg
     alt: "Educational Artifacts Placeholder"
-    btn_label: "Educational Artifacts"
-    btn_class: ".btn--inverse"
+    title: "Educational Artifacts"
+    excerpt: "A collection of my work as an educator for various courses"
   - url: /explorative-artifacts/
     image_path: /assets/images/open-circle3.svg
     alt: "Explorative Artifacts Placeholder"
-    btn_label: "Explorative Artifacts"
-    btn_class: ".btn--inverse"
+    title: "Explorative Artifacts"
+    excerpt: "A collection of projects of personal interest that are noteworthy"
 ---
 
 <!--<h1> Welcome to my Portfolio site!</h1>
