Tweaks to about page; config yml for portfolio pages; more content prep

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@ header:
 
 feature_row:
   - url: /professional-artifacts/
-    image_path: /assets/images/open-circle1.svg
+    image_path: /assets/images/work-writing.svg
     alt: "Professional Artifacts Placeholder"
     title: "Professional Artifacts"
     excerpt: "A collection of my work intended to demonstrate my professional skills"
     # btn_label: "Professional Artifacts"
   - url: /educational-artifacts/
-    image_path: /assets/images/open-circle2.svg
+    image_path: /assets/images/educational-writing.svg
     alt: "Educational Artifacts Placeholder"
     title: "Educational Artifacts"
     excerpt: "A collection of my work as an educator for various courses"
   - url: /explorative-artifacts/
-    image_path: /assets/images/open-circle3.svg
+    image_path: /assets/images/creative-ideas.svg
     alt: "Explorative Artifacts Placeholder"
     title: "Explorative Artifacts"
     excerpt: "A collection of projects of personal interest that are noteworthy"
@@ -42,7 +42,7 @@ feature_row:
 
 <p>Within this site, I have shared artifacts from my M.A journey, professional, teaching, and personal experience. There are resources as well that students or any individuals interested in <b>Technical Writing</b>.</p>
 
-<p>Any work related to my Master of Arts in Professional and Technical Writing help demonstrate how I met the following learning outcomes:</p>
+<p>Any works related to my Master of Arts in Professional and Technical Writing help demonstrate how I met the following learning outcomes:</p>
 
 <ul>
 <li>Demonstrate mastery of craft through attention to detail</li>
@@ -62,6 +62,10 @@ feature_row:
 
 <p>If you are interested in reviewing my resume or checking out my professional experience outside of these artifacts, checkout my <a href="https://www.linkedin.com/in/tanner-sullivan-184491121/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B%2BWCNEXP5RjqwoVrS5yETYg%3D%3D" target="_blank">LinkedIn</a>
 
+<p> This portfolio also houses some of my work in higher-education and explorative, fun, projects. I am so thankful to the open-source communicty for which this site wouldn't be possible. I use many tools as well on my machine for quality-of-life enhancements (or must-haves).</p>
+
+<p>I hope to continue advancing my technical skills and find ways to give back or creatively contribute to the community. ❤️</p>
+
 <br/>
 
 <h1>Available Artifacts</h1>
@@ -75,3 +79,8 @@ feature_row:
 {% include figure image_path="/assets/images/explorative-artifacts.png" alt="Placeholder image for explorative artifacts link" caption="Review some of my personal projects where I have a little fun." %}-->
 
 <br/>
+
+
+<h1> Lorem Ipsum </h1>
+
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
