--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ feature_row:
 <p>Here I hope to house professional, educational, and fun projects I felt help me grow as an individual.</p>-->
 
 <!--<h1>Purpose</h1>-->
-<h1>Hi There 👋</h1>
+<h1>👋 Hi There</h1>
 
 <p>Within this site, I have shared artifacts from my M.A journey, professional, teaching, and personal experience. There are resources as well that students or any individuals interested in <b>Technical Writing</b>.</p>
 
@@ -62,7 +62,7 @@ feature_row:
 
 <p>If you are interested in reviewing my resume or checking out my professional experience outside of these artifacts, checkout my <a href="https://www.linkedin.com/in/tanner-sullivan-184491121/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B%2BWCNEXP5RjqwoVrS5yETYg%3D%3D" target="_blank">LinkedIn page</a>. Even if I am not looking for a new job, I am always on the lookout for fun projects!</p>
 
-<h1> Have a Look Around 👓</h1>
+<h1>👓 Have a Look Around</h1>
 
 <p> This portfolio also houses some of my work in higher-education and explorative, fun, projects. I am so thankful to the open-source community for which this site wouldn't be possible. I use many tools as well on my machine for quality-of-life enhancements (or must-haves).</p>
 
