Home page is DONE, testing analytics, About page updated but needs review. Image updates still needed throughout the site. Last is Educational section and it is on to my next project.

--- a/index.html
+++ b/index.html
@@ -2,47 +2,42 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-default
-layout: splash
+layout: home
 author_profile: false
-excerpt: "Welcome to my portfolio site! Here I hope to house professional, educational, and fun projects I felt help me grow as an individual."
+excerpt: "Welcome to my portfolio site! Here I hope to house professional, educational, and fun projects that demonstrates my growth."
 header:
-  # overlay_
-  image: /assets/images/writing-site-splash.svg
+  image: assets/images/portfolio-banner-md.svg
   # overlay_filter: .3 # rgba() linear-gradient(rgba()) or decimal value for black
-# caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
-#  actions:
-#    - label: "More Info"
-#      url: "https://unsplash.com"
 
 feature_row:
   - url: /professional-artifacts/
-    image_path: /assets/images/work-writing.svg
-    alt: "Professional Artifacts Placeholder"
-    title: "Professional Artifacts"
+    image_path: /assets/images/professional.svg
+    alt: "Professional artifacts image placeholder"
+    title: "Professional and Workplace Artifacts"
     excerpt: "A collection of my work intended to demonstrate my professional skills"
-    # btn_label: "Professional Artifacts"
-  - url: /educational-artifacts/
-    image_path: /assets/images/educational-writing.svg
-    alt: "Educational Artifacts Placeholder"
-    title: "Educational Artifacts"
-    excerpt: "A collection of my work as an educator for various courses"
+    # btn_class:
+    # btn_label:
+  - url: /highered-artifacts/
+    image_path: /assets/images/portfolio.svg
+    alt: "Higher-ed artifacts image placeholder"
+    title: "Higher-ed Artifacts"
+    excerpt: "A collection of my work as an educator from various courses and related experiences"
+    # btn_class:
+    # btn_label:
   - url: /personal-projects/
-    image_path: /assets/images/creative-ideas.svg
-    alt: "Personal Projects Placeholder"
-    title: "Personal Projects"
-    excerpt: "A collection of projects of personal interest that are noteworthy"
+    image_path: /assets/images/personal.svg
+    alt: "Fun projects image placeholder"
+    title: "Personal (Passion) Projects"
+    excerpt: "Any of my blog posts that may be worthy of a highlight "
+    # btn_class:
+    # btn_label:
 ---
 
-<!--<h1> Welcome to my Portfolio site!</h1>
+<h1>👋 Hello hello</h1>
 
-<p>Here I hope to house professional, educational, and fun projects I felt help me grow as an individual.</p>-->
+<p>Welcome to my portfolio site; my name is Tanner Sullivan. This site demonstrates my accomplishments as a student, educator, and professional (with a few fun projects too). This site </p>
 
-<!--<h1>Purpose</h1>-->
-<h1>👋 Hi There</h1>
-
-<p>Within this site, I have shared artifacts from my M.A journey, professional, teaching, and personal experience. There are resources as well that students or any individuals interested in <b>Technical Writing</b>.</p>
-
-<p>All of my work should reflect my commitment to the learning outcomes of my M.A program:</p>
+<p>All of my work should reflect my commitment to the learning outcomes of UALR's Professional and Technical Writing program:</p>
 
 <ul>
 <li>Demonstrate mastery of craft through attention to detail</li>
@@ -53,34 +48,20 @@ feature_row:
 
 <li>Understand the history and major theories of my profession; knowing how the rules were created and have changed</li>
 
-<li>Conduct primary and secondary research that can contribute knkowledge to my field</li>
+<li>Conduct primary and secondary research that can contribute knowledge to my field</li>
 
 <li>Participate in profession beyond classroom</li>
 
 <li>Conduct myself in a professional manor </li>
 </ul>
 
-<p>If you are interested in reviewing my resume or checking out my professional experience outside of these artifacts, checkout my <a href="https://www.linkedin.com/in/tanner-sullivan-184491121/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B%2BWCNEXP5RjqwoVrS5yETYg%3D%3D" target="_blank">LinkedIn page</a>. Even if I am not looking for a new job, I am always on the lookout for fun projects!</p>
+<p>If you are interested in reviewing my resume or checking out my professional experience outside of these artifacts, checkout my <a href="https://www.linkedin.com/in/tanner-sullivan-184491121/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B%2BWCNEXP5RjqwoVrS5yETYg%3D%3D" target="_blank">LinkedIn page</a>. I am always on the lookout for fun projects!</p>
 
-<h1>👓 Have a Look Around</h1>
-
-<p> This portfolio also houses some of my work in higher-education and explorative, fun, projects. I am so thankful to the open-source community for which this site wouldn't be possible. I use many tools as well on my machine for quality-of-life enhancements (or must-haves).</p>
+<h1>👓 Have a look around</h1>
 
 <br/>
 
 {% include feature_row %}
 
-<!--{% include figure image_path="/assets/images/professional-artifacts.png" alt="Placeholder image for professional artifacts link" caption="Review my professional work or projects that reflect skills valued by software documentation writers. " %}
-
-{% include figure image_path="/assets/images/educational-artifacts.png" alt="Placeholder image for educational artifacts link" caption="Review my educational work or projects that reflect on my experience as an educator. " %}
-
-{% include figure image_path="/assets/images/explorative-artifacts.png" alt="Placeholder image for explorative artifacts link" caption="Review some of my personal projects where I have a little fun." %}-->
-
-<br/>
-
-<p>These artifact pages are also accessible from the navigation or by searching from any page on this site. </p>
-
-<p> With quite a bit of work behind me, I have a lot of work ahead of me. But no where in this portfolio site do I claim to be perfect. On the contrary, I showcase some of those rough-edges to highlight or explain my growth. Reflecting on my work helps me to contextualize any skills or processes involved in these new experiences.</p>
-
-<p>I hope to continue advancing my technical skills and find ways to give back or creatively contribute to the community. ❤️</p>
+<h1>💬 Blog posts</h1>
 
