GA changes again w/ mmistakes doc change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ feature_row:
     # btn_class:
     # btn_label:
 ---
-
+<head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MY06YS4J4B"></script>
 <script>
@@ -42,6 +42,7 @@ feature_row:
 
   gtag('config', 'G-MY06YS4J4B');
 </script>
+</head>
 
 <h1>👋 Hello hello</h1>
 
