remove that dang sentence, haha.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ feature_row:
 
 <h1>👋 Hello hello</h1>
 
-<p>Welcome to my portfolio site; my name is Tanner Sullivan. This site demonstrates my accomplishments as a student, educator, and professional (with a few fun projects too). This site </p>
+<p>Welcome to my portfolio site; my name is Tanner Sullivan. This site demonstrates my accomplishments as a student, educator, and professional (with a few fun projects too).</p>
 
 <p>All of my work should reflect my commitment to the learning outcomes of UALR's Professional and Technical Writing program:</p>
 
