Changes to branding and color scheme overhaul; content reduction on about me; update to blog posts source page

--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
 layout: home
 author_profile: false
 header:
-  image: assets/images/portfolio-banner-md.svg
-  # overlay_filter: .3 # rgba() linear-gradient(rgba()) or decimal value for black
-
+  overlay_color: "#e3e3e3"
+  overlay_image: assets/images/gray-floral-lines.svg
+  overlay_filter: .1 # rgba() linear-gradient(rgba()) or decimal value for black
+  actions:
+    - label: "See the Latest"
+      url: "/posts/"
+excerpt: >
+  Here you can find a collection of my professional and personal projects that reflect my growth.<br />
+title: Welcome to my Portfolio Site!
 feature_row:
   - url: /professional-artifacts/
-    image_path: /assets/images/professional.svg
-    alt: "Professional artifacts image placeholder"
-    title: "Professional and Workplace Artifacts"
+    # image_path: /assets/images/professional.svg
+    title: "Professional Artifacts"
     excerpt: "A collection of my work intended to demonstrate my professional skills"
     # btn_class:
-    # btn_label:
+    btn_label: "See Professional"
   - url: /highered-artifacts/
-    image_path: /assets/images/portfolio.svg
-    alt: "Higher-ed artifacts image placeholder"
+    # image_path: /assets/images/portfolio.svg
     title: "Higher-ed Artifacts"
-    excerpt: "A collection of my work as an educator from various courses and related experiences"
+    excerpt: "A collection of my work in higher-ed to demonstrate my teaching skills"
     # btn_class:
-    # btn_label:
+    btn_label: "See Higher-ed"
   - url: /personal-projects/
-    image_path: /assets/images/personal.svg
-    alt: "Fun projects image placeholder"
+    # image_path: /assets/images/personal.svg
     title: "Personal (Passion) Projects"
-    excerpt: "Any of my blog posts that may be worthy of a highlight "
+    excerpt: "Any projects I may start that is shareable or highlightable"
     # btn_class:
-    # btn_label:
+    btn_label: "See Personal"
 ---
 <head>
 <!-- Google tag (gtag.js) -->
